nginx-k8s-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-nginx
  labels:
    app: hello-world-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-world-nginx
  template:
    metadata:
      labels:
        app: hello-world-nginx
    spec:
      containers:
      - name: hello-world-nginx
        image: gnachev/nginx-sap-test-project:5
        ports:
        - containerPort: 8080
