nginx-k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-nginx-service
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    protocol: TCP
  selector:
    app: hello-world-nginx
