nginx-k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata: 
  name: nginx-ingress
  namespace: sap-cicd-lab
spec: 
  tls:
    - secretName: nginx-secret
      hosts:
        - hello-world-example.info
  ingressClassName: nginx
  rules: 
    - host: hello-world-example.info 
      http: 
        paths: 
          - backend: 
              service: 
                name: nginx-service
                port: 
                  number: 80
            path: / 
            pathType: Prefix
